<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    android:paddingTop="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_label"
                android:fontFamily="@font/roboto_serif_bold"
                android:textStyle="bold"
                android:textSize="36sp"
                android:textColor="@color/senerity_blue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setting_description"
                android:fontFamily="@font/roboto_serif_medium"
                android:textColor="@color/dark_grey"
                android:textSize="12sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_badge"
                android:paddingVertical="2dp"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connected_device_title"
                    android:fontFamily="@font/roboto_serif_medium"
                    android:textColor="@color/dark_grey"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:id="@+id/setting_label_total_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_applicable"
                    android:fontFamily="@font/roboto_serif_medium"
                    android:textColor="@color/dark_grey"/>
            </LinearLayout>

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_weight="1"
            android:id="@+id/avatar_animation"
            android:layout_width="100dp"
            android:layout_height="150dp"
            app:lottie_rawRes="@raw/robot_avatar"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/setting_submenu_voice_assistant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/voice_command"
                    android:src="@drawable/voice_assistance"
                    android:layout_marginEnd="15dp"
                    app:tint="@color/blue_grey" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/voice_command"
                    android:textColor="@color/blue_grey"
                    android:fontFamily="@font/roboto_serif_medium"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/setting_detail_nav_icon"
                    android:src="@drawable/right_arrow"
                    app:tint="@color/blue_grey"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_submenu_user_preference"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/preferences"
                    android:src="@drawable/filled_preferences"
                    android:layout_marginEnd="15dp"
                    app:tint="@color/blue_grey"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/preferences"
                    android:textColor="@color/blue_grey"
                    android:fontFamily="@font/roboto_serif_medium"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/setting_detail_nav_icon"
                    android:src="@drawable/right_arrow"
                    app:tint="@color/blue_grey"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/setting_submenu_help_feedback"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/help_and_feedback"
                    android:src="@drawable/filled_feedback"
                    android:layout_marginEnd="15dp"
                    app:tint="@color/blue_grey"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/help_and_feedback"
                    android:textColor="@color/blue_grey"
                    android:fontFamily="@font/roboto_serif_medium" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/setting_detail_nav_icon"
                    android:src="@drawable/right_arrow"
                    app:tint="@color/blue_grey"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_version"
        android:fontFamily="@font/roboto_serif_thin"
        android:textAlignment="center"
        android:textColor="@color/dark_grey"/>

</LinearLayout>