<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/white"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:id="@+id/lamp_card_detail_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:orientation="horizontal"
        android:gravity="start"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/bulb_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/bulb"
            android:src="@drawable/bulb_off"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="start|center">

            <TextView
                android:id="@+id/card_lamp_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="LAMP NAME"
                android:fontFamily="@font/roboto_serif_bold"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textAllCaps="true"
                android:textColor="@color/blue_grey"/>

            <TextView
                android:id="@+id/card_lamp_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/not_applicable"
                android:fontFamily="@font/roboto_serif_medium"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:textColor="@color/blue_grey"/>

            <TextView
                android:id="@+id/card_lamp_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/not_applicable"
                android:fontFamily="@font/roboto_serif_medium"
                android:textSize="12sp"
                android:textAllCaps="true"
                android:textColor="@color/blue_grey"/>

            <TextView
                android:id="@+id/card_lamp_colour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/not_applicable"
                android:fontFamily="@font/roboto_serif_medium"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:textColor="@color/blue_grey"/>
        </LinearLayout>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:contentDescription="@string/lamp_detail_nav_icon"
            android:layout_gravity="center"
            android:src="@drawable/right_arrow"
            app:tint="@color/blue_grey" />

    </LinearLayout>

</androidx.cardview.widget.CardView>