<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/baby_blue"
        android:paddingTop="35dp"
        android:paddingBottom="10dp"
        android:paddingHorizontal="20dp"
        android:orientation="horizontal"
        android:gravity="center|bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_serif_bold"
                android:text="@string/main_label"
                android:textColor="@color/blue_grey"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_serif_medium"
                android:text="@string/home_description"
                android:textColor="@color/dark_grey"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/home_shimmer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="15dp"
        android:paddingTop="15dp"
        app:shimmer_duration="800">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/home_shimmer_effect"/>
            <include layout="@layout/home_shimmer_effect"/>
            <include layout="@layout/home_shimmer_effect"/>
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/home_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="15dp"
                android:paddingTop="15dp"
                android:clipToPadding="false"/>

            <androidx.cardview.widget.CardView
            android:id="@+id/home_lamp_empty_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:background="@color/white"
            android:visibility="gone"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="30dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/home_lamp_empty_card_bulb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/bulb"
                    android:src="@drawable/bulb_iot"
                    app:tint="@color/blue_grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/scanning_message"
                    android:textColor="@color/dark_grey"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_serif_medium"/>
            </LinearLayout>

            </androidx.cardview.widget.CardView>
        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>
