<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">
    
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_menu"
        tools:layout="@layout/home"/>

    <LinearLayout
        android:id="@+id/bottom_nav_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:elevation="10dp"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/menu_home"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/round_badge"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingHorizontal="5dp">

            <ImageView
                android:id="@+id/menu_icon_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/bottom_nav_home"
                android:src="@drawable/home_filled"
                app:tint="@color/senerity_blue" />

            <TextView
                android:id="@+id/menu_label_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/bottom_nav_home"
                android:fontFamily="@font/roboto_serif_medium"
                android:textColor="@color/senerity_blue"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_analytics"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingHorizontal="5dp">

            <ImageView
                android:id="@+id/menu_icon_analytics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/bottom_nav_analytics"
                android:src="@drawable/filled_analytics"
                app:tint="@color/blue_grey" />

            <TextView
                android:id="@+id/menu_label_analytics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/bottom_nav_analytics"
                android:fontFamily="@font/roboto_serif_medium"
                android:textColor="@color/senerity_blue"
                android:textSize="16sp"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_setting"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingHorizontal="5dp">

            <ImageView
                android:id="@+id/menu_icon_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/bottom_nav_setting"
                android:src="@drawable/filled_setting"
                app:tint="@color/blue_grey" />

            <TextView
                android:id="@+id/menu_label_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/bottom_nav_setting"
                android:fontFamily="@font/roboto_serif_medium"
                android:textColor="@color/senerity_blue"
                android:textSize="16sp"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>