<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/baby_blue"
        android:paddingTop="35dp"
        android:paddingBottom="10dp"
        android:paddingHorizontal="20dp"
        android:orientation="vertical"
        android:gravity="center|center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_serif_bold"
            android:text="@string/analytics_label"
            android:textColor="@color/blue_grey"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_serif_medium"
            android:text="@string/analytics_description"
            android:textColor="@color/dark_grey"
            android:textSize="12sp" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/analytic_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:clipToPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="15dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:elevation="4dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|center"
                        android:background="@drawable/custom_background_1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Usage"
                            android:fontFamily="@font/roboto_serif_bold"
                            android:textColor="@color/blue_grey"
                            android:textSize="24sp"/>

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_applicable"
                            android:fontFamily="@font/roboto_serif_medium"
                            android:textColor="@color/blue_grey"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:elevation="4dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|center"
                        android:background="@color/white"
                        android:paddingHorizontal="5dp"
                        android:paddingVertical="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_applicable"
                            android:fontFamily="@font/roboto_serif_medium"
                            android:textColor="@color/blue_grey"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_applicable"
                            android:fontFamily="@font/roboto_serif_medium"
                            android:textColor="@color/blue_grey"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_applicable"
                            android:fontFamily="@font/roboto_serif_medium"
                            android:textColor="@color/blue_grey"/>


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:elevation="4dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|top"
                        android:background="@color/white"
                        android:paddingHorizontal="5dp"
                        android:paddingVertical="15dp"
                        android:orientation="vertical">

                        <com.github.mikephil.charting.charts.LineChart
                            android:id="@+id/analytic_line_chart"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:elevation="4dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|top"
                        android:background="@color/white"
                        android:paddingHorizontal="5dp"
                        android:paddingVertical="15dp"
                        android:orientation="vertical">

                        <com.github.mikephil.charting.charts.PieChart
                            android:id="@+id/analytic_pie_chart"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="5dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:elevation="4dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|top"
                        android:background="@color/white"
                        android:paddingHorizontal="5dp"
                        android:paddingVertical="15dp"
                        android:orientation="vertical">

                        <com.github.mikephil.charting.charts.BarChart
                            android:id="@+id/analytic_bar_chart"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>